--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -6,6 +6,6 @@
 -->
 <!-- Nicht vorhanden -->
 
-<a href=“https://github.com/ZenusDesigns/Steckbrief.git” target=“_blank”>Aufgabe 0, 21.03.2019</a></br>
+<a href=“https://zenusdesigns.github.io/Steckbrief/” target=“_blank”>Steckbrief</a></br>
 </body>
-</html>
+</html> 
