--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -8,7 +8,7 @@
 
 <a href=“https://zenusdesigns.github.io/Steckbrief/” target=“_blank”>Steckbrief</a></br>
 <a href=“https://zenusdesigns.github.io/Steckbrief/” target=“_blank”>Steckbrief</a></br>
-<a href=“https://zenusdesigns.github.io/EIA2/Aufgabe_0/” target=“_blank”>Aufgabe_0</a></br>
+<a href=“https://zenusdesigns.github.io/EIA2/Aufgabe_0/Index.html” target=“_blank”>Aufgabe_0</a></br>
 
 </body>
 </html> 
