--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,7 +1,7 @@
 <html> <head> <style>body {font-family:arial; font-size:small; background:#eeeeee}</style> </head>
 <body>
 
-<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_0/Index.html" >Aufgabe_0, 21.03.2019</a></br>
+<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_0/Index.html" target="_blank" >Aufgabe_0, 21.03.2019</a></br>
 <a href="https://github.com/ZenusDesigns/EIA2" target="_blank">EIA2 Repository</a></br>
 <a href="https://github.com/ZenusDesigns/EIA2" target="_blank">EIA2 Repository</a></br>
 
