--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -2,7 +2,7 @@
 <body>
 
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_0/Index.html" target="_blank" >Aufgabe_0, 21.03.2019</a></br>
-<a href="https://zenusdesigns.github.io" target="_blank">Userpage</a></br>
+<a href="https://zenusdesigns.github.io" target="_blank">Meine Userpage</a></br>
 <a href="https://github.com/ZenusDesigns/EIA2" target="_blank">EIA2 Repository</a></br>
 
 </body>
