--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,7 +1,7 @@
 <html> <head> <style>body {font-family:arial; font-size:small; background:#eeeeee}</style> </head>
 <body>
 
-<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_1" target="_blank" >Aufgabe_1, 31.03.2019</a></br> <!--in Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Mihai Alexandru, Wurz Kathrin, Brunn Felix-->
+<a href="https://github.com/ZenusDesigns/EIA2/tree/master/Aufgabe_1" target="_blank" >Aufgabe_1, 31.03.2019</a></br> <!--in Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Mihai Alexandru, Wurz Kathrin, Brunn Felix-->
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_0/Index.html" target="_blank" >Aufgabe_0, 21.03.2019</a></br>
 <a href="https://zenusdesigns.github.io" target="_blank">Meine Userpage</a></br>
 <a href="https://github.com/ZenusDesigns/EIA2" target="_blank">EIA2 Repository</a></br>
