--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,9 +1,9 @@
 <html> <head> <style>body {font-family:arial; font-size:small; background:#eeeeee}</style> </head>
 <body>
 
-<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_3/index.html" target="_blank" >Aufgabe 3, 14.04.2019</a></br>   <!--         In Zusammenarbeit mit Kübler Marvin, Culig Bastian,-->    
+<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_3/index.html" target="_blank" >Aufgabe 3, 14.04.2019</a></br>
+<a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_2/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 3-PDF, 10.04.2019</a></br>  <!--         In Zusammenarbeit mit Kübler Marvin, Culig Bastian,-->    
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_2/index.html" target="_blank" >Aufgabe_2, 10.04.2019</a></br>   <!--         In Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Carlotta Reinders, Mihai Alexandru, Wurz Kathrin.-->    
-<a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_2/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 3-PDF, 10.04.2019</a></br> 
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_1/Boxes/index.html" target="_blank" >Box-Code, 05.04.2019</a></br> 
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_1/Verbessertes_AD.pdf" target="_blank" >Aufgabe_1-AD-Verbesserung, 03.04.2019</a></br>    
 <a href="https://github.com/ZenusDesigns/EIA2/tree/master/Aufgabe_1" target="_blank" >Aufgabe_1, 31.03.2019</a></br> <!--in Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Mihai Alexandru, Wurz Kathrin, Brunn Felix-->
