--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -2,6 +2,7 @@
 <body>
 
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_4/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 4-Konzept, 18.04.2019</a></br>  
+<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_3/index.html" target="_blank" >Aufgabe_3</a></br>   <!--         In Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Carlotta Reinders, Mihai Alexandru, Wurz Kathrin.-->    
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_3/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 3-PDF, 10.04.2019</a></br>  <!--         In Zusammenarbeit mit Kübler Marvin, Culig Bastian,-->    
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_2/index.html" target="_blank" >Aufgabe_2, 10.04.2019</a></br>   <!--         In Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Carlotta Reinders, Mihai Alexandru, Wurz Kathrin.-->    
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_1/Boxes/index.html" target="_blank" >Box-Code, 05.04.2019</a></br> 
