--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -3,6 +3,8 @@
     <a href="https://zenusdesigns.github.io" target="_blank"> <strong> Userpage</strong> </a></br>
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
 
+
+<a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_4/Skizzen_Konzepte/Konzepte_Skizzen_2.pdf" target="_blank" >Aufgabe 4-Konzept_Neu, 24.04.2019</a></br>  
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_4/index.html" target="_blank" >Aufgabe_4</a></br>  
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_4/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 4-Konzept, 18.04.2019</a></br>  
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_3/index.html" target="_blank" >Aufgabe_3</a></br>   <!--         In Zusammenarbeit mit Kübler Marvin, Sanchez Lisa, Culig Bastian, Carlotta Reinders, Mihai Alexandru, Wurz Kathrin.-->    
