--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -4,11 +4,10 @@
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
     <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_6/index.html" target="_blank">Eisdealer-Mark III</a> <br>
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/Dokumentation/Ohne%20Titel%202.pdf" target="_blank">Dokumentation</a> <br>
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/Dokumentation/1.pdf" target="_blank">Dokumentation</a> <br>
     <a href="https://eia2mainbergerdaniel.herokuapp.com/Eisdealer_Mark_III" target="_blank">Heroku-App</a> <br>
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/server.ts"target="_blank" >Aufgabe_6-Code kommentiert, </a></br>
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/server/server.ts"target="_blank" >Aufgabe 6 - Code kommentiert </a></br>
     <hr>
-<a href="https://zenusdesigns.github.io/EIA2/Aufgabe_6/index.html"target="_blank" >Aufgabe_6-Code kommentiert, </a></br>
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_5/index.html" target="_blank" >Aufgabe_5, </a></br>  
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_5/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 5-Konzept, </a></br>  
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_4/Skizzen_Konzepte/Konzepte_Skizzen_2.pdf" target="_blank" >Aufgabe 4-Konzept_Neu, 24.04.2019</a></br>  
