--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -4,9 +4,10 @@
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
     <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_6/index.html" target="_blank">Eisdealer-Mark III</a> <br>
+    <a href="https://github.com/ZenusDesigns/EIA2/tree/master/Aufgabe_6/Dokumentation" target="_blank">Direktlink-Doku macht Probleme</a> <br>
     <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/Dokumentation/1.pdf" target="_blank">Dokumentation</a> <br>
     <a href="https://eia2mainbergerdaniel.herokuapp.com/Eisdealer_Mark_III" target="_blank">Heroku-App</a> <br>
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/server/server.ts"target="_blank" >Aufgabe 6 - Code kommentiert </a></br>
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_6/server/server.ts" target="_blank" >Aufgabe 6 - Code kommentiert </a></br>
     <hr>
 <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_5/index.html" target="_blank" >Aufgabe_5, </a></br>  
 <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_5/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 5-Konzept, </a></br>  
