--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -3,6 +3,7 @@
     <a href="https://zenusdesigns.github.io" target="_blank"> <strong> Userpage</strong> </a></br>
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
+    <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_7/index.html" target="_blank">Eisdealer-Mark IV</a> <br>
     <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_7/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 7-Konzept, </a></br>  
     <hr>
     <hr>
