--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -3,8 +3,8 @@
     <a href="https://zenusdesigns.github.io" target="_blank"> <strong> Userpage</strong> </a></br>
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
-    <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_10/index.html" target="_blank">Index-Aufgabe-10</a> <br>
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_10/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 10-Konzept, </a></br>  
+    <a href="https://zenusdesigns.github.io/EIA2/Aquarium/index.html" target="_blank">Index-Aufgabe-Aquarium</a> <br>
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aquarium/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 10-Konzept, </a></br>  
     <hr>
     <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_9/Client/index.html" target="_blank">Index-Aufgabe-9</a> <br>
     <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_9/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 9-Konzept, </a></br>  
