--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -3,6 +3,9 @@
     <a href="https://zenusdesigns.github.io" target="_blank"> <strong> Userpage</strong> </a></br>
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_11/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 11-Konzept, </a></br>  
+    <hr>
+    <hr>
     <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_10/index.html" target="_blank">Index-Aufgabe-Aufgabe_10</a> <br>
     <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_10/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >Aufgabe 10-Konzept, </a></br>  
     <hr>
