--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -3,7 +3,7 @@
     <a href="https://zenusdesigns.github.io" target="_blank"> <strong> Userpage</strong> </a></br>
     <a href="https://github.com/ZenusDesigns/EIA2" target="_blank"> <strong> Repository </strong> </a></br>
     <hr>
-    <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_12/index.html" target="_blank">Index-Aufgabe-Aufgabe_12</a> <br>
+    <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_12/index.html" target="_blank">Index-Aufgabe_12</a> <br>
     <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Aufgabe_12/Skizzen_Konzepte/Konzepte_Skizzen.pdf" target="_blank" >- Aufgabe 12-Konzept - </a></br>  
     <hr>
     <a href="https://zenusdesigns.github.io/EIA2/Aufgabe_11/index.html" target="_blank">Index-Aufgabe-Aufgabe_11</a> <br>
