--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -6,8 +6,8 @@
     <br>
     <br>
     <a href="https://zenusdesigns.github.io/EIA2/Endabgabe/index.html" target="_blank">Index-ENDABGABE</a> <br>
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Endabgabe/Instruction/Konzepte_Skizzen.pdf" target="_blank" >Konzept-ENDABGABE</a></br>  
-    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Endabgabe/ZIP/Konzepte_Skizzen.pdf" target="_blank" >ZIP-ENDABGABE</a></br>  
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Endabgabe/Konzept/Konzept.pdf" target="_blank" >Konzept-ENDABGABE</a></br>  
+    <a href="https://github.com/ZenusDesigns/EIA2/blob/master/Endabgabe.zip" target="_blank" >ZIP-ENDABGABE</a></br>  
     <br>
     <br>
     <br>
